--- a/src/pages/schedule/index.astro
+++ b/src/pages/schedule/index.astro
@@ -76,11 +76,8 @@ const currentUser = Astro.locals.user!;
     courses={courses}
     haveAdminAccess={haveAdminAccess}
   /> -->
-  <div class="border-b pb-4 flex items-center gap-2 justify-between">
-    <div>
-      <h1 class="text-3xl font-bold">Schedule</h1>
-      <p class="text-muted-foreground">View and manage your schedule</p>
-    </div>
+  <div class="border-b pb-4">
+      <h1 class="text-xl text-gray-300 font-bold mt-2">View and manage your schedule</h1>
   </div>
   <Calender client:load currentUser={currentUser} />
 </RootLayout>
