--- a/src/pages/dashboard/index.astro
+++ b/src/pages/dashboard/index.astro
@@ -177,8 +177,11 @@ if (role === Role.STUDENT) {
 }
 
 const name = currentUser.name;
+
+
+const getAllHolidays = await db.holidays.findMany({})
 ---
 
 <RootLayout title="Dashboard">
-  <Dashboard data={dashboardData} name={name} client:load />
+  <Dashboard data={dashboardData} name={name} currentUser={currentUser} holidays={getAllHolidays} client:load />
 </RootLayout>
