--- a/src/pages/calendar/index.astro
+++ b/src/pages/calendar/index.astro
@@ -3,7 +3,7 @@ import RootLayout from "@layouts/RootLayout.astro";
 import { Calendar } from "./_components/calendar";
 import { EventsSidebar } from "./_components/events";
 import db from "@/lib/db";
-import { format } from 'date-fns';
+import { format } from "date-fns";
 
 const currentUser = Astro.locals.user;
 
@@ -30,7 +30,7 @@ let courses = await db.course.findMany({
   },
 });
 
-let holidays= await db.holidays.findMany({})
+let holidays = await db.holidays.findMany({});
 
 const assignments = courses.flatMap((course) =>
   course.classes.flatMap((classItem) =>
@@ -42,9 +42,9 @@ const assignments = courses.flatMap((course) =>
       endDate.setHours(23, 59, 59, 999);
 
       return {
-        type:"Assignment",
+        type: "Assignment",
         name: attachment.title,
-        description: `Assignment added on ${format(new Date(attachment.createdAt), 'MMMM d, yyyy, EEEE, h:mm a')}`,
+        description: `Assignment added on ${format(new Date(attachment.createdAt), "MMMM d, yyyy, EEEE, h:mm a")}`,
         startDate,
         endDate,
         link: `assignments/${attachment.id}`,
@@ -53,12 +53,11 @@ const assignments = courses.flatMap((course) =>
   )
 );
 
-
 const classEvents = courses.flatMap((course) =>
   course.classes.map((classItem) => ({
-    type:"Class",
+    type: "Class",
     name: classItem.title,
-    description: `Session starts at ${format(new Date(classItem.createdAt), 'MMMM d, yyyy, EEEE, h:mm a')}`,
+    description: `Session starts at ${format(new Date(classItem.createdAt), "MMMM d, yyyy, EEEE, h:mm a")}`,
     startDate: new Date(classItem.createdAt),
     endDate: new Date(classItem.createdAt.getTime() + 2000 * 60 * 60),
     link: `courses/${course.id}/classes/${classItem.id}`,
@@ -81,10 +80,7 @@ const holidayEvents = holidays.map((holiday) => {
   };
 });
 
-
-
-const events = [...assignments, ...classEvents,...holidayEvents];
-
+const events = [...assignments, ...classEvents, ...holidayEvents];
 ---
 
 <RootLayout title="Events">
