--- a/src/pages/instructor/activity/index.astro
+++ b/src/pages/instructor/activity/index.astro
@@ -48,6 +48,7 @@ const [users, totalCount] = await Promise.all([
         { username: { contains: search, mode: "insensitive" } },
       ],
       role: { in: ["MENTOR", "STUDENT"] },
+      organizationId: user.organizationId,
       ...(showOnline ? { lastSeen: { gte: onlineCutoff } } : {}),
     },
     skip,
@@ -62,6 +63,7 @@ const [users, totalCount] = await Promise.all([
         { username: { contains: search, mode: "insensitive" } },
       ],
       role: { in: ["MENTOR", "STUDENT"] },
+      organizationId: user.organizationId,
       ...(showOnline ? { lastSeen: { gte: onlineCutoff } } : {}),
     },
   }),
