--- a/src/pages/leaderboard/index.astro
+++ b/src/pages/leaderboard/index.astro
@@ -8,6 +8,9 @@ if (!currentUser) return null;
 const mentor = await db.enrolledUsers.findMany({
   where: {
     username: currentUser.username,
+    user: {
+      organizationId: currentUser.organizationId,
+    },
   },
   select: {
     mentorUsername: true,
