adds reset password default with email

--- a/src/pages/reset-password/index.astro
+++ b/src/pages/reset-password/index.astro
@@ -2,8 +2,11 @@
 import ManagePassword from "@/pages/profile/_components/ManagePassword";
 
 import AuthLayout from "@layouts/AuthLayout.astro";
+
+const searchParams = Astro.url.searchParams;
+const email = searchParams.get("email");
 ---
 
 <AuthLayout title="Reset Password">
-  <ManagePassword client:load />
+  <ManagePassword client:load initialEmail={email} />
 </AuthLayout>
