--- a/src/pages/reset-password/index.astro
+++ b/src/pages/reset-password/index.astro
@@ -4,7 +4,7 @@ import ManagePassword from "@/pages/profile/_components/ManagePassword";
 import AuthLayout from "@layouts/AuthLayout.astro";
 
 const searchParams = Astro.url.searchParams;
-const email = searchParams.get("email");
+const email = searchParams.get("email") ?? "";
 ---
 
 <AuthLayout title="Reset Password">
