--- a/src/pages/instructor/assignments/[id].astro
+++ b/src/pages/instructor/assignments/[id].astro
@@ -9,7 +9,9 @@ type Props = {
 const call = Astro.callAction;
 const { id } = Astro.params;
 
-const { data } = await call(actions.assignments_getAllAssignedAssignmentsByUserId, { id });
+const { data } = await call(actions.assignments_getAllAssignedAssignmentsByUserId, {
+  id: id || "",
+});
 const { courses, coursesWithAssignments } = data || {};
 ---
 
